# librediffusion

./: .gitignore  CMakeLists.txt  README.md  pyproject.toml  train-lora.py
.github/: FUNDING.yml
.github/workflows/: ci.yml
img2img_turbo/: export.py  model.py
klein/: build_klein_engines.py  export_klein.py  export_klein_fp8_calib.py
src/: cuda_tensor.cpp  cuda_tensor.hpp  dylib_loader.hpp  kernels.cu  kernels.hpp  kernels_klein.cu  kernels_rife.cu  librediffusion.cpp  librediffusion.embeddings.cpp  librediffusion.flux2.cpp  librediffusion.flux2.hpp  librediffusion.hpp  librediffusion.images.cpp  librediffusion.img2img_turbo.cpp  librediffusion.img2img_turbo.hpp  librediffusion.init.cpp  librediffusion.rife.cpp  librediffusion.rife.hpp  librediffusion.unet.cpp  librediffusion.v2v.cpp  librediffusion.vae.cpp  librediffusion.workflows.cpp  librediffusion_c.cpp  librediffusion_c.flux2.cpp  librediffusion_c.h  librediffusion_c.img2img_turbo.cpp  librediffusion_c.rife.cpp  librediffusion_loader.hpp  model_cache.hpp  nchw.cu  nchw.hpp  pcg.hpp  tensorrt_wrappers.cpp  tensorrt_wrappers.hpp  tensorrt_wrappers_klein.cpp  tensorrt_wrappers_klein.hpp  tensorrt_wrappers_rife.cpp  tensorrt_wrappers_rife.hpp
src/clip-tokenizer-c/: Cargo.toml  clip_tokenizer_c.h  qwen_tokenizer_c.h
src/clip-tokenizer-c/src/: lib.rs
src/schedulers/: SDXS-512-DreamShaper.hpp  lcm_dreamshaper_v7.hpp  sd-turbo.hpp  sdxl-turbo.hpp  segmind-vegart.hpp  timestep_params.hpp
src/streamdiffusion/: config.py  deterministic_noise.py  pipeline.py  stream_parameter_updater.py  wrapper.py
src/streamdiffusion/acceleration/sfast/: __init__.py
src/streamdiffusion/acceleration/tensorrt/: __init__.py  builder.py  fp8_quantize.py  models.py  sdxl_unet_wrapper.py  utilities.py
src/streamdiffusion/acceleration/tensorrt/export_wrappers/: unet_controlnet_export.py  unet_unified_export.py
src/streamdiffusion/acceleration/tensorrt/models/: attention_processors.py  controlnet_models.py  models.py  utils.py
src/streamdiffusion/acceleration/tensorrt_orig/: __init__.py  builder.py  engine.py  models.py  utilities.py
src/streamdiffusion/cpp/: CMakeLists.txt  bindings.cpp
src/streamdiffusion/cuda/: __init__.py  cuda_ops.py  kernels.cu
src/streamdiffusion/img2img_turbo/: __init__.py  export.py  pix2pix_turbo.py
src/streamdiffusion/klein/: build_klein_engines.py  build_one_fp8.py  build_rife.py  export_klein.py  fix_klein_dynamic_seq.py  fix_qwen_complex.py  klein_env.sh
src/streamdiffusion/modules/: controlnet_module.py
src/streamdiffusion/tools/: install-tensorrt.py
tools/: export_ipadapter_image_encoder.py  export_tokenizer.py  generate_prompt_embeddings.py  generate_scheduler_tables.py  inspect_engine.py
