[project]
name = "real-time-latent-consistency-model"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"

# hint: You're using CPython 3.14 (`cp314`), but `onnxruntime` (v1.23.2) only has wheels with the following Python ABI tags: `cp310`, `cp311`, `cp312`, `cp313`, `cp313t`
requires-python = ">=3.13,<3.14"
dependencies = [
    "accelerate>=1.5",
    "colored>=2.3",
    "cuda-python>=13",
    "cudart>=1",
    "onnxsim_prebuilt>=0.4.36",
    "diffusers>=0.32",
    "ninja>=1.11",
    "onnx-graphsurgeon>=0.5",
    "onnxruntime==1.23.2",
    "onnxscript>=0.5.0",
    "onnx<1.19", # 1.19 produces ir_version 12 not supported by onnxruntime 1.23
    "peft>=0.15.0",
    "polygraphy>=0.49.20",
    "tensorrt>=10.14.0.0",
    "torch>=2.9.0",
    "torchvision>=0.21.0",
    "transformers>=4.49.0"
]

[[tool.uv.index]]
name = "pytorch-cu130"
url = "https://download.pytorch.org/whl/cu130"
explicit = true

[tool.uv.sources]
torch = [
  { index = "pytorch-cu130", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]
torchvision = [
  { index = "pytorch-cu130", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]
